logo, number format fix, FK overflow fix,

--- a/style.css
+++ b/style.css
@@ -1,7 +1,7 @@
 /* Logo */
 /* Adapted from Zachary Blackwood */
 [data-testid="stSidebar"] {
-    background-image: url(https://streamlit.io/images/brand/streamlit-logo-secondary-colormark-darktext.png);
+    /*background-image: url(https://streamlit.io/images/brand/streamlit-logo-secondary-colormark-darktext.png);*/
     background-size: 200px;
     background-repeat: no-repeat;
     background-position: 4px 20px;
@@ -15,7 +15,7 @@ div.css-13y9bkb.e1f1d6gn2 {
     border: 1px solid #CCCCCC;
     padding: 5% 5% 5% 10%;
     border-radius: 5px;
-    border-left: 0.5rem solid #9AD8E1 !important;
+    border-left: 0.5rem solid #455294 !important;
     box-shadow: 0 0.15rem 1.75rem 0 rgba(58, 59, 69, 0.15) !important;
 
 }
